objects/rh2__Filter__c.object
<CustomObject>
    <fields>
        <fullName>rh2__Condition__c</fullName>
        <description>Filter value to apply to the filter field.</description>
        <label>Filter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Field__c</fullName>
        <description>Name of field to filter on.</description>
        <label>zDeprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__ImportId__c</fullName>
        <externalId>true</externalId>
        <label>Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__JSON__c</fullName>
        <label>JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Logic__c</fullName>
        <description>Comparison operator.</description>
        <label>Logic</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Newline_Formula__c</fullName>
        <formula>BR()</formula>
        <label>Newline Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Multi_Picklist__c</fullName>
        <label>Test Multi-Picklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test 1</fullName>
                </value>
                <value>
                    <fullName>Test 2</fullName>
                </value>
                <value>
                    <fullName>Test 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rh2__XRef__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Filter</label>
    <listViews>
        <fullName>rh2__All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rh2__Condition__c</columns>
        <columns>rh2__XRef__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>